# AsmEmulator

./: CMakeLists.txt  Command.h  Realization.h  main.cpp  test1.txt  test2.txt  test3.txt
log/include/spdlog/: spdlog.h
